chore: fix alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,3 +21,8 @@ body {
     background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
         rgb(var(--background-start-rgb));
 }
+
+.hexagon {
+    grid-row-start: 1;
+    grid-column-start: 1;
+}
